@@ -7,20 +7,7 @@ our @EXPORT = qw/make_executable split_like_shell/;
 
 use Config;
 
-sub _make_executable {
-  # Perl's chmod() is mapped to useful things on various non-Unix
-  # platforms, so we use it everywhere even though it looks
-  # Unixish.
-
-  foreach (@_) {
-    my $current_mode = (stat $_)[2];
-    chmod $current_mode | oct(111), $_;
-  }
-}
-
 sub make_executable {
-  _make_executable(@_);
-
   foreach my $script (@_) {
     if (-T $script) {
       # Skip native batch script
@@ -28,8 +15,6 @@ sub make_executable {
       my $out = eval { _pl2bat(in => $script, update => 1) };
       if ($@) {
         warn "WARNING: Unable to convert file '$script' to an executable script:\n$@";
-      } else {
-        _make_executable($out);
       }
     }
   }
